--- a/Airvironment/Airvironment/Features/ScreenTwo/Cell/ScreenTwoTableViewCell.xib
+++ b/Airvironment/Airvironment/Features/ScreenTwo/Cell/ScreenTwoTableViewCell.xib
@@ -9,18 +9,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="167" id="KGk-i7-Jjw" customClass="ScreenTwoTableViewCell" customModule="Airvironment" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="167"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="193" id="KGk-i7-Jjw" customClass="ScreenTwoTableViewCell" customModule="Airvironment" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="193"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="167"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="193"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IHD-y0-rfN">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_temperature" translatesAutoresizingMaskIntoConstraints="NO" id="kb5-ql-w9E">
-                                <rect key="frame" x="10" y="0.0" width="80" height="80"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="ic_temperature" translatesAutoresizingMaskIntoConstraints="NO" id="kb5-ql-w9E">
+                                <rect key="frame" x="10" y="0.0" width="74" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="T9j-0M-0pZ"/>
                                     <constraint firstAttribute="width" constant="80" id="s0J-Hi-lWB"/>
@@ -53,10 +53,10 @@
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xM5-ej-5Nf">
-                        <rect key="frame" x="0.0" y="90" width="320" height="80"/>
+                        <rect key="frame" x="0.0" y="110" width="320" height="80"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7lD-oT-sLw">
-                                <rect key="frame" x="13" y="0.0" width="80" height="80"/>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7lD-oT-sLw">
+                                <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Ge-OS-H6w">
                                         <rect key="frame" x="0.0" y="0.0" width="37.5" height="80"/>
@@ -65,25 +65,25 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="°" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sVj-hw-yjJ">
-                                        <rect key="frame" x="73" y="0.0" width="7" height="80"/>
+                                        <rect key="frame" x="47.5" y="0.0" width="7" height="80"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="sVj-hw-yjJ" firstAttribute="top" secondItem="7lD-oT-sLw" secondAttribute="top" id="UI4-Pg-3Zp"/>
-                                    <constraint firstAttribute="bottom" secondItem="sVj-hw-yjJ" secondAttribute="bottom" id="bEf-YQ-Pbd"/>
-                                    <constraint firstItem="9Ge-OS-H6w" firstAttribute="top" secondItem="7lD-oT-sLw" secondAttribute="top" id="eJI-tL-fq5"/>
+                                    <constraint firstItem="9Ge-OS-H6w" firstAttribute="top" secondItem="7lD-oT-sLw" secondAttribute="top" id="Eho-uo-ZpP"/>
                                     <constraint firstAttribute="width" constant="80" id="fFz-Eg-e8H"/>
-                                    <constraint firstAttribute="bottom" secondItem="9Ge-OS-H6w" secondAttribute="bottom" id="gXL-Yg-K4J"/>
-                                    <constraint firstItem="9Ge-OS-H6w" firstAttribute="leading" secondItem="7lD-oT-sLw" secondAttribute="leading" id="hgc-eT-EU0"/>
+                                    <constraint firstAttribute="bottom" secondItem="9Ge-OS-H6w" secondAttribute="bottom" id="kDy-XX-2yh"/>
+                                    <constraint firstItem="sVj-hw-yjJ" firstAttribute="top" secondItem="7lD-oT-sLw" secondAttribute="top" id="l8B-6g-BBI"/>
+                                    <constraint firstAttribute="bottom" secondItem="sVj-hw-yjJ" secondAttribute="bottom" id="pD7-o1-6EZ"/>
+                                    <constraint firstItem="9Ge-OS-H6w" firstAttribute="leading" secondItem="7lD-oT-sLw" secondAttribute="leading" id="pbQ-qq-OfP"/>
                                     <constraint firstAttribute="height" constant="80" id="rjI-JN-MXm"/>
-                                    <constraint firstAttribute="trailing" secondItem="sVj-hw-yjJ" secondAttribute="trailing" id="tTW-iL-FFN"/>
+                                    <constraint firstItem="sVj-hw-yjJ" firstAttribute="leading" secondItem="9Ge-OS-H6w" secondAttribute="trailing" constant="10" id="sKu-fE-YEq"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nhB-b8-jsk">
-                                <rect key="frame" x="227" y="0.0" width="80" height="80"/>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nhB-b8-jsk">
+                                <rect key="frame" x="240" y="0.0" width="80" height="80"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bas-5C-Gdd">
                                         <rect key="frame" x="0.0" y="0.0" width="38" height="80"/>
@@ -112,59 +112,66 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3jQ-cn-k07">
                                 <rect key="frame" x="120" y="0.0" width="80" height="80"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6XB-ol-r06">
-                                        <rect key="frame" x="0.0" y="0.0" width="37.5" height="80"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Q8-yj-dzz">
+                                        <rect key="frame" x="47.5" y="0.0" width="14" height="18"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Q8-yj-dzz">
-                                        <rect key="frame" x="66" y="0.0" width="14" height="80"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6XB-ol-r06">
+                                        <rect key="frame" x="8" y="0.0" width="37.5" height="80"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="5Q8-yj-dzz" firstAttribute="top" secondItem="3jQ-cn-k07" secondAttribute="top" id="0zL-7F-aGx"/>
-                                    <constraint firstAttribute="bottom" secondItem="5Q8-yj-dzz" secondAttribute="bottom" id="5xX-md-A0w"/>
                                     <constraint firstItem="6XB-ol-r06" firstAttribute="leading" secondItem="3jQ-cn-k07" secondAttribute="leading" id="Fgu-n6-LOL"/>
-                                    <constraint firstAttribute="bottom" secondItem="6XB-ol-r06" secondAttribute="bottom" id="Ig8-KF-g0J"/>
+                                    <constraint firstItem="5Q8-yj-dzz" firstAttribute="leading" secondItem="6XB-ol-r06" secondAttribute="trailing" constant="10" id="UVY-Ta-Hya"/>
                                     <constraint firstItem="6XB-ol-r06" firstAttribute="top" secondItem="3jQ-cn-k07" secondAttribute="top" id="mAH-CR-rza"/>
-                                    <constraint firstAttribute="trailing" secondItem="5Q8-yj-dzz" secondAttribute="trailing" id="nzf-1z-MjO"/>
                                     <constraint firstAttribute="width" constant="80" id="tI0-HQ-8Ta"/>
                                     <constraint firstAttribute="height" constant="80" id="ylz-w3-kl8"/>
                                 </constraints>
                             </view>
                         </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="3jQ-cn-k07" firstAttribute="centerX" secondItem="xM5-ej-5Nf" secondAttribute="centerX" id="4TF-Qo-oc3"/>
+                            <constraint firstItem="3jQ-cn-k07" firstAttribute="centerX" secondItem="xM5-ej-5Nf" secondAttribute="centerX" id="5RK-uz-V9N"/>
                             <constraint firstItem="7lD-oT-sLw" firstAttribute="leading" secondItem="xM5-ej-5Nf" secondAttribute="leading" constant="13" id="PTE-ph-xEC"/>
                             <constraint firstItem="nhB-b8-jsk" firstAttribute="top" secondItem="xM5-ej-5Nf" secondAttribute="top" id="ShW-df-edw"/>
                             <constraint firstItem="7lD-oT-sLw" firstAttribute="top" secondItem="xM5-ej-5Nf" secondAttribute="top" id="SnB-vG-vfh"/>
                             <constraint firstAttribute="bottom" secondItem="7lD-oT-sLw" secondAttribute="bottom" id="ULa-84-jDQ"/>
+                            <constraint firstAttribute="bottom" secondItem="nhB-b8-jsk" secondAttribute="bottom" id="UoM-gM-wVF"/>
                             <constraint firstAttribute="trailing" secondItem="nhB-b8-jsk" secondAttribute="trailing" constant="13" id="WRd-v0-nAG"/>
                             <constraint firstItem="3jQ-cn-k07" firstAttribute="centerX" secondItem="xM5-ej-5Nf" secondAttribute="centerX" id="ZE4-jY-9lC"/>
+                            <constraint firstItem="3jQ-cn-k07" firstAttribute="centerY" secondItem="xM5-ej-5Nf" secondAttribute="centerY" id="aJi-ES-6Mm"/>
+                            <constraint firstItem="3jQ-cn-k07" firstAttribute="centerY" secondItem="xM5-ej-5Nf" secondAttribute="centerY" id="f7D-sC-e6B"/>
+                            <constraint firstItem="nhB-b8-jsk" firstAttribute="top" secondItem="xM5-ej-5Nf" secondAttribute="top" id="rEF-fv-UWy"/>
                             <constraint firstAttribute="bottom" secondItem="nhB-b8-jsk" secondAttribute="bottom" id="rjJ-DJ-YhG"/>
                             <constraint firstItem="3jQ-cn-k07" firstAttribute="centerY" secondItem="xM5-ej-5Nf" secondAttribute="centerY" id="t1a-YF-Chz"/>
                         </constraints>
                     </view>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="xM5-ej-5Nf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="9y8-Su-AtG"/>
                     <constraint firstItem="IHD-y0-rfN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="SHV-XI-f6r"/>
                     <constraint firstAttribute="trailing" secondItem="xM5-ej-5Nf" secondAttribute="trailing" id="YcR-hd-9pO"/>
+                    <constraint firstAttribute="bottom" secondItem="xM5-ej-5Nf" secondAttribute="bottom" id="qrj-Me-hPC"/>
                     <constraint firstAttribute="trailing" secondItem="IHD-y0-rfN" secondAttribute="trailing" id="ses-MC-RQ1"/>
-                    <constraint firstItem="xM5-ej-5Nf" firstAttribute="top" secondItem="IHD-y0-rfN" secondAttribute="bottom" constant="10" id="t3c-q4-oQn"/>
+                    <constraint firstItem="xM5-ej-5Nf" firstAttribute="top" secondItem="IHD-y0-rfN" secondAttribute="bottom" constant="30" id="t3c-q4-oQn"/>
                     <constraint firstItem="IHD-y0-rfN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="wzJ-zA-uKh"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="cellHum" destination="6XB-ol-r06" id="oel-EO-Hz7"/>
                 <outlet property="cellPoll" destination="Bas-5C-Gdd" id="r4H-8K-IKe"/>
                 <outlet property="cellTemp" destination="9Ge-OS-H6w" id="neA-cK-Jsf"/>
             </connections>
-            <point key="canvasLocation" x="8.6956521739130448" y="104.79910714285714"/>
+            <point key="canvasLocation" x="8.6956521739130448" y="113.50446428571428"/>
         </tableViewCell>
     </objects>
     <resources>
