--- a/Airvironment/Airvironment/Features/ScreenTwo/View/ScreenTwoViewController.xib
+++ b/Airvironment/Airvironment/Features/ScreenTwo/View/ScreenTwoViewController.xib
@@ -25,7 +25,7 @@
                 </imageView>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Bss-0i-cOM">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <color key="separatorColor" name="AccentColor"/>
                     <color key="sectionIndexColor" systemColor="opaqueSeparatorColor"/>
                     <color key="sectionIndexBackgroundColor" systemColor="systemBlueColor"/>
