--- a/Airvironment/Airvironment/Features/ScreenTwo/Cell/ScreenTwoTableViewCell.xib
+++ b/Airvironment/Airvironment/Features/ScreenTwo/Cell/ScreenTwoTableViewCell.xib
@@ -112,14 +112,14 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3jQ-cn-k07">
                                 <rect key="frame" x="120" y="0.0" width="80" height="80"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Q8-yj-dzz">
-                                        <rect key="frame" x="47.5" y="0.0" width="14" height="18"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Q8-yj-dzz">
+                                        <rect key="frame" x="47.5" y="28" width="14" height="18"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6XB-ol-r06">
-                                        <rect key="frame" x="8" y="0.0" width="37.5" height="80"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6XB-ol-r06">
+                                        <rect key="frame" x="0.0" y="28" width="37.5" height="18"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -128,8 +128,9 @@
                                 <constraints>
                                     <constraint firstItem="6XB-ol-r06" firstAttribute="leading" secondItem="3jQ-cn-k07" secondAttribute="leading" id="Fgu-n6-LOL"/>
                                     <constraint firstItem="5Q8-yj-dzz" firstAttribute="leading" secondItem="6XB-ol-r06" secondAttribute="trailing" constant="10" id="UVY-Ta-Hya"/>
-                                    <constraint firstItem="6XB-ol-r06" firstAttribute="top" secondItem="3jQ-cn-k07" secondAttribute="top" id="mAH-CR-rza"/>
+                                    <constraint firstItem="5Q8-yj-dzz" firstAttribute="top" secondItem="3jQ-cn-k07" secondAttribute="top" constant="28" id="fS4-5W-yUn"/>
                                     <constraint firstAttribute="width" constant="80" id="tI0-HQ-8Ta"/>
+                                    <constraint firstItem="6XB-ol-r06" firstAttribute="top" secondItem="3jQ-cn-k07" secondAttribute="top" constant="28" id="uGZ-Qw-tx2"/>
                                     <constraint firstAttribute="height" constant="80" id="ylz-w3-kl8"/>
                                 </constraints>
                             </view>
